[package]
name = "rosewood"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8" }

[dependencies]
once_cell = { version = "1.20", features = ["race"], default-features = false }

[[bench]]
name = "tree_benchmark"
harness = false
